--- a/apps/learnSpring-frontend/project.json
+++ b/apps/learnSpring-frontend/project.json
@@ -2,7 +2,7 @@
   "name": "learnSpring-frontend",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "prefix": "learnSpring",
   "sourceRoot": "apps/learnSpring-frontend/src",
   "tags": [],
   "targets": {
