--- a/apps/learn-spring-backend/.gitignore
+++ b/apps/learn-spring-backend/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+apps/learn-spring-backend/volumes/learnSpring/postgres/
 
 ### STS ###
 .apt_generated
