--- a/apps/learn-spring-backend/pom.xml
+++ b/apps/learn-spring-backend/pom.xml
@@ -49,8 +49,13 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
+			<!-- <version>4.30.0</version> -->
 		</dependency>
-
+		<dependency> 
+			<groupId>javax.xml.bind</groupId> 
+			<artifactId>jaxb-api</artifactId> 
+			<version>2.3.0</version> 
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
